<resources>
    <string name="app_name">Xero App</string>
    <string name="mapAddressTitle">Map Address</string>
    <string name="submit">Submit</string>
    <string name="streetAddress">Building Number</string>
    <string name="streetName">Street Name</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zipCode">Zip Code</string>
    <string name="country">Country</string>
    <string name="title_activity_maps">Map</string>
    <string name="zoomIn">+</string>
    <string name="zoomOut">-</string>
</resources>
