<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterAddress">


    <EditText
        android:id="@+id/streetAddressIn"
        android:hint="@string/streetAddress"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="text"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/streetNameIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        />

    <EditText
        android:id="@+id/streetNameIn"
        android:hint="@string/streetName"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="text"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintTop_toBottomOf="@+id/streetAddressIn"
        app:layout_constraintBottom_toTopOf="@+id/cityIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        />

    <EditText
        android:id="@+id/cityIn"
        android:hint="@string/city"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="text"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintTop_toBottomOf="@+id/streetNameIn"
        app:layout_constraintBottom_toTopOf="@id/stateIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        />

    <EditText
        android:id="@+id/stateIn"
        android:hint="@string/state"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="text"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintTop_toBottomOf="@+id/cityIn"
        app:layout_constraintBottom_toTopOf="@id/zipCodeIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        />

    <EditText
        android:id="@+id/zipCodeIn"
        android:hint="@string/zipCode"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="text"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintTop_toBottomOf="@+id/stateIn"
        app:layout_constraintBottom_toTopOf="@id/countryIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        />

    <EditText
        android:id="@+id/countryIn"
        android:hint="@string/country"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="text"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintTop_toBottomOf="@+id/zipCodeIn"
        app:layout_constraintBottom_toTopOf="@id/submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        />

    <Button
        android:id="@+id/submit"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="gotoDisplayMap"
        android:text="@string/submit"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintTop_toBottomOf="@+id/countryIn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</android.support.constraint.ConstraintLayout>